--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -118,7 +118,7 @@ allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.145.195.180;
 allow 114.35.245.150;
-allow 1.168.169.181;
+allow 1.170.228.223;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -1311,6 +1311,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1888,6 +1889,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -2094,5 +2096,6 @@ allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.168.173.143;
+allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
