--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -118,7 +118,7 @@ set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.145.195.180;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.168.169.181;
+set_real_ip_from 1.170.228.223;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -1311,6 +1311,7 @@ set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1888,6 +1889,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -2094,5 +2096,6 @@ set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.168.173.143;
+set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
 set_real_ip_from 98.128.173.33;
