--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,7 +110,7 @@ allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.145.195.180;
 allow 114.35.245.150;
-allow 114.41.24.3;
+allow 1.170.211.251;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -138,7 +138,6 @@ allow 142.171.12.88;
 allow 142.44.133.81;
 allow 144.172.118.4;
 allow 144.172.118.41;
-allow 144.172.118.55;
 allow 144.172.118.73;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -911,6 +910,7 @@ allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.113.8;
+allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.118.31;
@@ -1656,6 +1656,7 @@ allow 2a10:1fc0:10::fa6c:cac5;
 allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
@@ -1717,6 +1718,7 @@ allow 2a12:a800:9:1:193:26:115:61;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1727,7 +1729,6 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1903,7 +1904,6 @@ allow 5.34.182.203;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.209.253;
-allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
@@ -2022,6 +2022,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
+allow 91.219.237.39;
 allow 91.227.114.153;
 allow 91.227.77.107;
 allow 91.227.77.108;
