--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -768,6 +768,7 @@ allow 2a10:1fc0:10::fa6c:cac5;
 allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
