--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -110,7 +110,7 @@ set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.145.195.180;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 114.41.24.3;
+set_real_ip_from 1.170.211.251;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -138,7 +138,6 @@ set_real_ip_from 142.171.12.88;
 set_real_ip_from 142.44.133.81;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.41;
-set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.118.73;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
@@ -911,6 +910,7 @@ set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.8;
+set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
 set_real_ip_from 205.185.118.31;
@@ -1656,6 +1656,7 @@ set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
 set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:1467::;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
@@ -1717,6 +1718,7 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:61;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1727,7 +1729,6 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1903,7 +1904,6 @@ set_real_ip_from 5.34.182.203;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
 set_real_ip_from 54.36.209.253;
-set_real_ip_from 54.36.209.254;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
@@ -2022,6 +2022,7 @@ set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
+set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.227.114.153;
 set_real_ip_from 91.227.77.107;
 set_real_ip_from 91.227.77.108;
