--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -109,7 +109,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.227.88;
+allow 114.41.3.8;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -1274,6 +1274,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1852,6 +1853,7 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -2059,5 +2061,6 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
+allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
