--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,7 +110,7 @@ allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.145.238.129;
 allow 114.35.245.150;
-allow 1.170.229.150;
+allow 114.41.13.191;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -153,6 +153,7 @@ allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.41.95.1;
+allow 154.83.88.219;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 161.129.68.162;
@@ -939,6 +940,8 @@ allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -998,11 +1001,13 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -1562,6 +1567,7 @@ allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
+allow 2a0f:7803:fac2:ab6d::1;
 allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
@@ -1789,7 +1795,6 @@ allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
-allow 46.30.188.218;
 allow 47.254.142.180;
 allow 47.89.193.230;
 allow 5.104.86.6;
@@ -1878,7 +1883,6 @@ allow 8.208.26.177;
 allow 8.209.106.19;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
