--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -110,7 +110,7 @@ deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.145.238.129;
 deny 114.35.245.150;
-deny 1.170.229.150;
+deny 114.41.13.191;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -153,6 +153,7 @@ deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.41.95.1;
+deny 154.83.88.219;
 deny 158.69.252.116;
 deny 160.119.249.240;
 deny 161.129.68.162;
@@ -939,6 +940,8 @@ deny 23.137.254.137;
 deny 23.151.8.8;
 deny 23.153.248.33;
 deny 23.153.248.34;
+deny 23.155.8.104;
+deny 23.184.48.13;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -998,11 +1001,13 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
@@ -1562,6 +1567,7 @@ deny 2a0e:bfc2:0:24::3456;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
+deny 2a0f:7803:fac2:ab6d::1;
 deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
@@ -1789,7 +1795,6 @@ deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
-deny 46.30.188.218;
 deny 47.254.142.180;
 deny 47.89.193.230;
 deny 5.104.86.6;
@@ -1878,7 +1883,6 @@ deny 8.208.26.177;
 deny 8.209.106.19;
 deny 82.221.128.191;
 deny 82.221.131.5;
-deny 82.221.131.86;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
