--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -110,7 +110,7 @@ set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.145.238.129;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.170.229.150;
+set_real_ip_from 114.41.13.191;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -153,6 +153,7 @@ set_real_ip_from 152.53.133.14;
 set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.41.95.1;
+set_real_ip_from 154.83.88.219;
 set_real_ip_from 158.69.252.116;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.129.68.162;
@@ -939,6 +940,8 @@ set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
+set_real_ip_from 23.155.8.104;
+set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
@@ -998,11 +1001,13 @@ set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
 set_real_ip_from 2602:fc24:12:a679::1;
+set_real_ip_from 2602:fc24:18:a378::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
@@ -1562,6 +1567,7 @@ set_real_ip_from 2a0e:bfc2:0:24::3456;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:bfc7:0:4::6e7a;
 set_real_ip_from 2a0e:e701:1198::1;
+set_real_ip_from 2a0f:7803:fac2:ab6d::1;
 set_real_ip_from 2a0f:7803:fac5:cd0::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:424c::1;
@@ -1789,7 +1795,6 @@ set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
-set_real_ip_from 46.30.188.218;
 set_real_ip_from 47.254.142.180;
 set_real_ip_from 47.89.193.230;
 set_real_ip_from 5.104.86.6;
@@ -1878,7 +1883,6 @@ set_real_ip_from 8.208.26.177;
 set_real_ip_from 8.209.106.19;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
-set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
