--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1596,6 +1596,7 @@ allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:1467::;
+allow 2a11:6100:0:1e6a::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:1:1:194:26:192:77;
@@ -1920,6 +1921,7 @@ allow 89.58.41.156;
 allow 91.132.144.59;
 allow 91.202.5.104;
 allow 91.202.5.155;
+allow 91.202.5.72;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
@@ -1966,6 +1968,5 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
-allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
