--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -715,6 +715,7 @@ allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:1467::;
+allow 2a11:6100:0:1e6a::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:1:1:194:26:192:77;
